src/objects/Account_Contact__c.object
<CustomObject>
    <description>This object allows tracking of multiple addresses/sites and Contact types.</description>
    <fields>
        <fullName>Account_Currency__c</fullName>
        <description>Currency set on the Associated Account</description>
        <formula>TEXT(Account__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Currency set on the Associated Account</inlineHelpText>
        <label>Account Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bill To \ Ship To</relationshipLabel>
        <relationshipName>Account_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Identifier__c</fullName>
        <label>Contact Identifier</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Key__c</fullName>
        <externalId>true</externalId>
        <label>Contact Key</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_RecordType__c</fullName>
        <formula>Contact__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact RecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bill To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship To</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bill To\ Ship To</relationshipLabel>
        <relationshipName>Account_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Integrated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Community_User__c</fullName>
        <formula>Contact__r.Is_Community_User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Community User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_SF2_ID__c</fullName>
        <label>Legacy SF2 ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_SF2_Information__c</fullName>
        <label>Legacy SF2 Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participant_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Participant Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Site</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bill To \ Ship To - All</relationshipLabel>
        <relationshipName>Account_Contacts1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordStatus__c</fullName>
        <label>Record Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Account_Address__c</fullName>
        <formula>(Account__r.BillingStreet)+ &quot;, &quot; +(Account__r.BillingCity)+ &quot;, &quot;+(Account__r.BillingState)+ &quot;, &quot; +(Account__r.BillingCountry)+ &quot;, &quot;+( Account__r.BillingPostalCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bill To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship To</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Used_for__c</fullName>
        <label>Used for</label>
        <picklist>
            <picklistValues>
                <fullName>BillingCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataHub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile &amp; Portals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC Solutions Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFG Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PartnerConnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire Live</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Account Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Contact_Key__c</columns>
        <columns>Integration_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Account Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_Type_Is_not_Editable</fullName>
        <active>true</active>
        <description>Please ensure that user is not able to change value of Contact Type one ACR is created</description>
        <errorConditionFormula>ISCHANGED(Contact_Type__c) &amp;&amp; NOT(ISNEW())</errorConditionFormula>
        <errorDisplayField>Contact_Type__c</errorDisplayField>
        <errorMessage>Can not change value of Contact Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Participant_Account_Is_not_Editable</fullName>
        <active>true</active>
        <description>Please ensure that user is not able to change value of Participant Account one ACR is created.</description>
        <errorConditionFormula>ISCHANGED(Participant_Account__c) &amp;&amp; NOT(ISNEW()) &amp;&amp; NOT($User.ProfileId == &apos;00e30000000cGt8&apos;)</errorConditionFormula>
        <errorDisplayField>Participant_Account__c</errorDisplayField>
        <errorMessage>Can not change value of Participant Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRAC_Acct_ParticipantID_Verification</fullName>
        <active>true</active>
        <description>Checks to ensure that the Participant Account attached to an ACR record has the ParticipantID field populated.</description>
        <errorConditionFormula>ISBLANK( Participant_Account__r.Participant_id__c )</errorConditionFormula>
        <errorMessage>Please ensure that the Participant Account you are trying to add has a valid Participant ID.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRAC_Contact_Email_Verification</fullName>
        <active>true</active>
        <description>Checks to ensure that the Contact attached to an ACR record has an Email address</description>
        <errorConditionFormula>ISNEW() &amp;&amp; ISBLANK(Contact__r.Email)</errorConditionFormula>
        <errorMessage>Please ensure that the associated Contact record has a valid email address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRAC_Contact_Print_As_Verification</fullName>
        <active>true</active>
        <description>Checks to ensure that the Contact attached to an ACR record has the Print As field populated</description>
        <errorConditionFormula>ISBLANK(Contact__r.Print_As__c) &amp;&amp;  ISNEW()</errorConditionFormula>
        <errorMessage>Please ensure that the associated Contact record has the &quot;Print As&quot; filled out.</errorMessage>
    </validationRules>
</CustomObject>